# resto-api

./: .gitignore  Cargo.toml  Experiments.md  LICENSE  README.md
migrations/2021-11-06-153556_create_menu/: down.sql  up.sql
migrations/2021-11-07-041915_create_tables/: down.sql  up.sql
migrations/2021-11-07-041920_create_status/: up.sql
migrations/2021-11-07-041934_create_orders/: up.sql
migrations/2021-11-07-041939_create_order_items/: up.sql
migrations/2021-11-08-135703_add_tables_status/: down.sql  up.sql
migrations/2021-11-09-121647_set_prep_time_not_null/: down.sql  up.sql
src/: db_calls.rs  init_db.rs  lib.rs  main.rs  menu.rs  models.rs  order_items.rs  orders.rs  runner.rs  schema.rs  status.rs  tables.rs
